--- a/data/ui/AboutMenulibreDialog.ui
+++ b/data/ui/AboutMenulibreDialog.ui
@@ -1,14 +1,25 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <!-- interface-requires about_menulibre_dialog 1.0 -->
   <!-- interface-requires gtk+ 3.0 -->
   <object class="AboutMenulibreDialog" id="about_menulibre_dialog">
-    <property name="can_focus">False</property>
+    <property translatable="yes" name="license"># Copyright (C) 2012 Sean Davis &lt;smd.seandavis@gmail.com&gt;
+# This program is free software: you can redistribute it and/or modify it 
+# under the terms of the GNU General Public License version 3, as published 
+# by the Free Software Foundation.
+# 
+# This program is distributed in the hope that it will be useful, but 
+# WITHOUT ANY WARRANTY; without even the implied warranties of 
+# MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR 
+# PURPOSE.  See the GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License along 
+# with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.
+</property><property translatable="yes" name="copyright">Copyright (C) 2012 Sean Davis &lt;smd.seandavis@gmail.com&gt;</property><property name="can_focus">False</property>
     <property name="border_width">5</property>
     <property name="icon">../media/menulibre.svg</property>
     <property name="type_hint">normal</property>
     <property name="program_name">Menulibre</property>
-    <property name="authors"></property>
+    <property name="authors">Copyright (C) 2012 Sean Davis &lt;smd.seandavis@gmail.com&gt;</property>
     <property name="logo">../media/menulibre.svg</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox1">
